--- a/data.html
+++ b/data.html
@@ -61,7 +61,7 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="lottie.js"></script>
-<script src="script.js"></script>  
+<script src="./script/lottie.js"></script>
+<script src="./script/script.js"></script>  
 </body>
 </html>
